--- a/device42-fetch.yml
+++ b/device42-fetch.yml
@@ -1,14 +1,16 @@
 ---
-- name: Fetch and process devices from Device42
+- name: Fetch, chunk and process Device42 devices
   hosts: localhost
   gather_facts: false
+
   vars:
+    # Bu değerleri AWX Job Template üzerinden Extra Variables kısmında da verebilirsiniz
     device42_api_url: "https://213.153.197.248:8585/api/1.0/devices/all"
-    # Base64 ile zaten encode edilmiş "admin:AA123456."
     device42_auth_header: "Basic YWRtaW46QWExMjM0NTYu."
+    chunk_size: 500
 
   tasks:
-    - name: Retrieve all devices from Device42
+    - name: Get all devices from Device42
       uri:
         url: "{{ device42_api_url }}"
         method: GET
@@ -16,38 +18,44 @@
           Authorization: "{{ device42_auth_header }}"
         return_content: yes
         status_code: 200
-        # Eğer self-signed sertifika kullanıyorsan:
         validate_certs: no
       register: device42_response
 
-    - name: Parse JSON response into a list
+    - name: Extract device list from response
       set_fact:
-        devices: "{{ device42_response.json.devices  | default(device42_response.json) }}"
+        devices: "{{ device42_response.json.Devices | default(device42_response.json.devices) }}"
 
-    - name: Show how many devices were returned
+    - name: Split devices into chunks of {{ chunk_size }}
+      set_fact:
+        device_chunks: "{{ devices | batch(chunk_size, []) }}"
+
+    - name: Expose each chunk as its own variable (devices_chunk_1, devices_chunk_2, ...)
+      set_fact:
+        "{{ 'devices_chunk_' ~ (idx + 1) }}": "{{ item }}"
+      loop: "{{ device_chunks }}"
+      loop_control:
+        index_var: idx
+
+    - name: Debug number of chunks created
       debug:
-        msg: "{{ devices | length }} cihaz çekildi."
+        msg: "{{ device_chunks | length }} parça oluşturuldu."
 
-    - name: Process each device (örnek düzenleme)
-      loop: "{{ devices }}"
+    - name: Example: Uppercase device name and annotate (first chunk only)
+      set_fact:
+        modified: "{{ modified | default([]) + [ {
+          'name': (item.name | default('UNKNOWN')) | upper,
+          'serial_number': item.serial_no | default(item.serial_number),
+          'note': 'Processed by AWX on ' ~ ansible_date_time.iso8601
+        } ] }}"
+      loop: "{{ devices_chunk_1 }}"
       loop_control:
         label: "{{ item.name | default(item.device_name) }}"
-      block:
-        - name: Uppercase device name and add timestamp note
-          set_fact:
-            modified:
-              name: "{{ item.name | upper }}"
-              serial_number: "{{ item.serial_number }}"
-              note: "Processed by AWX on {{ ansible_date_time.iso8601 }}"
 
-        - name: Debug modified record
-          debug:
-            var: modified
+    - name: Debug modified devices (first chunk only)
+      debug:
+        var: modified
 
-        # → Burada istersen `uri` ile PUT/POST yaparak Device42’ye güncelleme gönderebilir,
-        #    istersen veriyi bir dosyaya yazdırabilir ya da inventory’ye ekleyebilirsin.
-
-    - name: Dump all raw devices to a file for later editing
+    - name: Dump original device list to file (optional)
       copy:
         content: "{{ devices | to_nice_json }}"
         dest: "/tmp/device42_devices_raw.json"
