--- a/send-to-smax.yml
+++ b/send-to-smax.yml
@@ -4,13 +4,12 @@
   gather_facts: false
 
   vars:
-    # Device42 bağlantı bilgileri
     device42_api_url: "https://213.153.197.248:8585/api/1.0/devices/all"
     device42_auth_header: "Basic YWRtaW46QWExMjM0NTYu."
     chunk_size: 1
 
-    # SMAX endpoint, ama cookie değeri workflow’dan gelecek
     smax_api_url: "https://destek.kafein.com.tr/rest/669866050/ems/bulk"
+    # workflow’dan gelen fact’i kullanıyoruz
     smax_cookie: "{{ smax_cookie }}"
 
   tasks:
@@ -25,19 +24,19 @@
         validate_certs: no
       register: device42_response
 
-    - name: 2) Parse devices list from response JSON
+    - name: 2) Parse devices list
       set_fact:
         devices: "{{ device42_response.json.Devices | default(device42_response.json.devices) }}"
 
-    - name: 3) Split devices into chunks of size {{ chunk_size }}
+    - name: 3) Chunk devices (size {{ chunk_size }})
       set_fact:
         device_chunks: "{{ devices | batch(chunk_size, []) }}"
 
-    - name: 4) Show how many chunks were created
+    - name: 4) Show chunk count
       debug:
         msg: "{{ device_chunks | length }} chunks created."
 
-    - name: 5) Loop over each chunk and send to SMAX
+    - name: 5) Send each chunk to SMAX
       vars:
         smax_payload: |
           {
@@ -56,7 +55,7 @@
                     'CpuId':'',
                     'CpuCoreNumber': (device.cpucore|default(device.cpucount|default(0)))
                   }]} | to_json }}",
-                  "IPAddress": "{% if device.ip_addresses is defined and device.ip_addresses|length > 0 %}{{ device.ip_addresses[0].ip }}{% else %}{% endif %}",
+                  "IPAddress": "{% if device.ip_addresses|length > 0 %}{{ device.ip_addresses[0].ip }}{% endif %}",
                   "SerialNo": "{{ device.serial_no | default('') }}",
                   "OSName": "{{ device.os | default('') }}",
                   "OSVersion": "{{ device.osver | default('') }}",
@@ -82,7 +81,7 @@
         label: "chunk_{{ idx }}"
       register: smax_responses
 
-    - name: 6) Show SMAX responses for each chunk
+    - name: 6) Show SMAX responses
       debug:
         var: item
       loop: "{{ smax_responses.results }}"
