--- a/fetch-smax-token.yaml
+++ b/fetch-smax-token.yaml
@@ -1,15 +1,17 @@
+# fetch-smax-token.yaml
 ---
 - name: Fetch SMAX auth token
   hosts: localhost
   gather_facts: false
 
   vars:
-    smax_token_url: "https://destek.kafein.com.tr/auth/authentication-endpoint/authenticate/token?TENANTID=669866050"
-    smax_user: "duosis.admin"
-    smax_pass: "duosisITSM.25"
+    # Prompt on Launch yaparsanız bu üç satırı Extra Vars olarak girin:
+    # smax_token_url: "https://destek.kafein.com.tr/auth/authentication-endpoint/authenticate/token?TENANTID=669866050"
+    # smax_user:       "duosis.admin"
+    # smax_pass:       "duosisITSM.25"
 
   tasks:
-    - name: 1) Get SMAX token
+    - name: 1) Get SMAX token via POST (equivalent to your curl)
       uri:
         url: "{{ smax_token_url }}"
         method: POST
@@ -21,11 +23,8 @@
         validate_certs: no
       register: auth_resp
 
-    - name: 2) Parse token out of response
-      set_fact:
-        smax_cookie: "SMAX_AUTH_TOKEN={{ (auth_resp.content | from_json).token }}"
-
-    - name: 3) Expose smax_cookie to workflow
+    - name: 2) Expose SMAX_AUTH_TOKEN as workflow fact
       set_stats:
         data:
-          smax_cookie: "{{ smax_cookie }}"
+          smax_cookie: >-
+            SMAX_AUTH_TOKEN={{ (auth_resp.content | from_json).token }}
