--- a/fetch-smax-token.yaml
+++ b/fetch-smax-token.yaml
@@ -1,17 +1,16 @@
-# fetch-smax-token.yaml
 ---
-- name: Fetch SMAX auth token
+- name: Fetch SMAX auth token and print it
   hosts: localhost
   gather_facts: false
 
   vars:
-    # Prompt on Launch ile Extra Vars olarak girin:
-    # smax_token_url: "https://destek.kafein.com.tr/auth/authentication-endpoint/authenticate/token?TENANTID=669866050"
-    # smax_user:       "duosis.admin"
-    # smax_pass:       "duosisITSM.25"
+    # Extra Vars olarak Launch ekranından girin (ya da doğrudan buraya sabitleyin)
+    smax_token_url: "https://destek.kafein.com.tr/auth/authentication-endpoint/authenticate/token?TENANTID=669866050"
+    smax_user:       "duosis.admin"
+    smax_pass:       "duosisITSM.25"
 
   tasks:
-    - name: 1) Get SMAX token via POST
+    - name: 1) Request SMAX token
       uri:
         url: "{{ smax_token_url }}"
         method: POST
@@ -23,8 +22,12 @@
         validate_certs: no
       register: auth_resp
 
-    - name: 2) Expose SMAX_AUTH_TOKEN as workflow fact
-      set_stats:
-        scoreboard: global
-        data:
-          smax_cookie: "{{ 'SMAX_AUTH_TOKEN=' + (auth_resp.content | from_json).token }}"
+    - name: 2) Parse token from response
+      set_fact:
+        smax_token: "{{ (auth_resp.content | from_json).token }}"
+
+    - name: 3) Show the token in output
+      debug:
+        msg:
+          - "Fetched SMAX token:"
+          - "{{ smax_token }}"
