combined yml & folder check added

--- a/playbooks/device42-fetch-devices.yml
+++ b/playbooks/device42-fetch-devices.yml
@@ -7,6 +7,7 @@
     device42_api_url: "{{ device42_api_url }}"  # AWX Extra Vars input
     device42_auth_header: "{{ device42_auth_header }}"  # AWX Extra Vars input
     chunk_size: "{{ chunk_size | default(1) }}"  # AWX Extra Vars input, default 1
+    devices_file_path: "{{ devices_file_path | default('./device42_devices.json') }}"  # AWX Extra Vars input
 
   tasks:
     - name: Fetch devices from Device42
@@ -31,7 +32,7 @@
     - name: Save devices to file
       copy:
         content: "{{ devices | to_nice_json }}"
-        dest: "./device42_devices.json"
+        dest: "{{ devices_file_path }}"
 
     - name: Show number of chunks created
       debug:
@@ -43,4 +44,8 @@
       loop: "{{ device_chunks }}"
       loop_control:
         index_var: idx
-        label: "devices_chunk_{{ idx+1 }}" 
+        label: "devices_chunk_{{ idx+1 }}"
+
+    - name: Show file location
+      debug:
+        msg: "Devices saved to: {{ devices_file_path }}" 
