--- a/playbooks/smax-insert-devices.yml
+++ b/playbooks/smax-insert-devices.yml
@@ -84,14 +84,6 @@
                   "HostName": "{{ device.name | default('') }}",
                   "MemorySize": {{ device.ram | default(0) }},
                   "AssetTag": "{{ device.asset_no | default('') }}",
-                  "Cpus": "{{ {'Cpu':[{
-                    'CpuType':'',
-                    'CpuVendor':'',
-                    'CpuClockSpeed': (device.cpuspeed|default(''))|string,
-                    'CpuId':'',
-                    'CpuCoreNumber': (device.cpucore|default(device.cpucount|default(0)))|string
-                  }]} | to_json }}",
-                  "IpAddresses": "{{ {'IpAddress':[{'IpValue': (device.ip_addresses[0].ip if device.ip_addresses|length > 0 else ''),'IpType':'','AuthoritativeDNSName':'','RoutingDomain':'','GlobalId':'','Keep':'','Id':''}]} | to_json }}",
                   "SerialNo": "{{ device.serial_no | default('') }}",
                   "OSName": "{{ device.os | default('') }}",
                   "OSVersion": "{{ device.osver | default('') }}",
@@ -112,6 +104,7 @@
         body: "{{ smax_payload }}"
         status_code: 200,201,202
         validate_certs: no
+        return_content: yes
       loop: "{{ device_chunks }}"
       loop_control:
         index_var: idx
@@ -126,4 +119,10 @@
       loop_control:
         index_var: rsp_idx
         label: "response_{{ rsp_idx }}"
+      when: smax_responses is defined
+
+    - name: Show SMAX response content
+      debug:
+        msg: "Response for chunk {{ item.0 }}: {{ item.1.json | default(item.1.content) }}"
+      loop: "{{ smax_responses.results | subelements('results') }}"
       when: smax_responses is defined
